--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"> 
+    <link rel="shortcut icon" href="./img/favicom.ico" type="image/x-icom">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@100..900&family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="./css/styl.css">
+   <script src="./js/tour.js"></script>
+
     <title>Document</title>
 
 </head>
 <body>
     <!-- navbar -->
-        <nav class="navbar">
+      <nav class="navbar">
         <div class="container navbar-flex">
             <img src="./img/logo_dark.svg" alt="" class="logo"/>
             <!-- desktop menu -->
@@ -25,11 +31,24 @@
             
                 <div class="icon-menu">
                   <ul class="icon-list">
-                    <li class="icon-item" <a href="http://facebook"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li class="icon-item"><a href="http://facebook"><i class="fa-brands fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-threads"></i></a><li>
                    </ul>
-                </div>                     
+                </div>   
+                  <!-- mobile menu -->
+            <div class="mobile-menu">
+                 <div class="mobile-menu-toggle"> 
+                  <i class="fa-solid fa-bars fa-2x"></i>
+                 </div>
+                <div class="mobile-menu-items">
+                  <ul class="mobile-menu-list">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contat</a></li>
+                   </ul>
+                </div>                  
         </div>
     </nav>
      <!-- hero -->
