--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- navbar -->
       <nav class="navbar">
         <div class="container navbar-flex">
-            <img src="" alt="logo" class="logo"/>
+            <img src="./img/tourlogo.png" alt="logo" class="logo"/>
             <!-- desktop menu -->
             <div class="main-menu">
                 <ul class="menu-list">
@@ -32,8 +32,8 @@
                 <div class="icon-menu">
                   <ul class="icon-list">
                     <li class="icon-item"><a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-threads"></i></a><li>
+                    <li class="icon-item"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="icon-item"><a href="#"><i class="fa-brands fa-threads"></i></a><li>
                    </ul>
                 </div>   
                   <!-- mobile menu -->
@@ -44,16 +44,17 @@
                 <div class="mobile-menu-items">
                   <ul class="mobile-menu-list">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">Contat</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Service</a></li>
+                    <li><a href="#tours">Contat</a></li>
                    </ul>
                 </div>                  
+            </div>
         </div>
     </nav>
      <!-- hero -->
     <div class="hero">
-        <div class="contaner">
+        <div class="container">
             <h1>continue exploring</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, repellendus?                
             </p>
@@ -62,7 +63,7 @@
     </div>
      <!--  about---------------------------->
             <section class="about" id="about">
-                <h2>about<span class="text-secondary">us</span></h2>
+                <h2>about <span class="text-secondary">us</span></h2>
                 <div class="about-content">
                     <div class="about-img">
                       <img src="./img/aboutimg.jpg" alt="about">
@@ -78,21 +79,21 @@
             </section>
      <!-- services -->.
       <main class="services" id="services">
-        <h2>tour<span class="text-secondary"></span></h2>
-        <div coass="services-content">
-            <div class="service-tittle">
-                <i class="fa-solid fa-dumbbell"></i>
+        <h2>our <span class="text-secondary">services</span></h2>
+        <div class="services-content">
+            <div class="service-title">
+                <i class="fa-solid fa-wallet"></i>
                 <h3>saving money</h3>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat, dolor!</p>
             </div>
-            <div coass="services-tittle">
-              <i class="fa-solid fa-dumbbell"></i>
+            <div class="service-title">
+              <i class="fa-solid fa-tree"></i>
               <h3>endless hiking</h3>
               <p>Lorem ipsum dolor sit amet.</p>
 
            </div>
-           <div coass="services-tittle">
-              <i class="fa-solid fa-dumbbell"></i>
+           <div class="service-title">
+              <i class="fa-solid fa-socks"></i>
               <h3>amazing comfort</h3>
               <p>Lorem ipsum dolor sit amet.</p>
            </div>
@@ -111,12 +112,11 @@
              <h3>adventure</h3>
              <p>Lorem ipsum dolor sit amet.</p>
              <ul>
-                  <li>China</li>
+                  <li><i class="fa-solid fa-map"></i>China</li>
                   <li>6 Day</li>
                   <li>$2100</li>
              </ul>
-              <a href="#" class="btn">read more</a>
-            
+              <a href="#" class="btn">read more</a>           
          </div>
        
 
@@ -130,7 +130,7 @@
                    <li class="menu-item"><a href="#">Home</a></li>
                    <li class="menu-item"><a href="#about">about</a></li>
                    <li class="menu-item"><a href="#services">Servies</a></li>
-                   <li class="menu-item"><a href="#tours">Contact</a></li>
+                   <li class="menu-item"><a href="#tours">Tours</a></li>
                 </ul> 
             </div>
          <div class="footer-icon-menu">
