--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <!-- desktop menu -->
             <div class="main-menu">
                 <ul class="menu-list">
-                   <li class="menu-item"><a href="#">Home</a></li>
+                   <li class="menu-item"><a href="#hero">Home</a></li>
                    <li class="menu-item"><a href="#about">about</a></li>
                    <li class="menu-item"><a href="#services">Servies</a></li>
-                   <li class="menu-item"><a href="#tours">Contact</a></li>
+                   <li class="menu-item"><a href="#tours">Tours</a></li>
                 </ul> 
             </div>
                  
@@ -46,14 +46,14 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Service</a></li>
-                    <li><a href="#tours">Contat</a></li>
+                    <li><a href="#tours">Tours</a></li>
                    </ul>
                 </div>                  
             </div>
         </div>
     </nav>
      <!-- hero -->
-    <div class="hero">
+    <div class="hero" id="hero">
         <div class="container">
             <h1>continue exploring</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, repellendus?                
@@ -107,7 +107,7 @@
         <div class="cards">
            <div class="card">
               <div class="card-img">
-                <img src="./img/pexels-eberhardgross-1612351.jpg" alt="">
+                <img src="./img/mountainvillage1.png" alt="">
               <p>Aug 1th 2025</p>
               </div>
              <div class="card-content">
@@ -122,7 +122,7 @@
            </div>
            <div class="card">
               <div class="card-img">
-                <img src="./img/pexels-eberhardgross-1612351.jpg" alt="">
+                <img src="./img/mountainvillage2.png" alt="">
               <p>Aug 1th 2025</p>
               </div>
              <div class="card-content">
@@ -137,7 +137,7 @@
            </div>
            <div class="card">
               <div class="card-img">
-                <img src="./img/pexels-eberhardgross-1612351.jpg" alt="">
+                <img src="./img/mountainvillage3.png" alt="">
               <p>Aug 1th 2025</p>
               </div>
              <div class="card-content">
@@ -152,7 +152,7 @@
            </div>
            <div class="card">
               <div class="card-img">
-                <img src="./img/pexels-eberhardgross-1612351.jpg" alt="">
+                <img src="./img/mountainvillage4.png" alt="">
               <p>Aug 1th 2025</p>
               </div>
              <div class="card-content">
